add "update repository" route
